--- a/src/layouts/defaults.html.eco.html
+++ b/src/layouts/defaults.html.eco.html
@@ -1,8 +1,12 @@
 <html>
 <head>
     <title><%= @document.title %> | Fluid Infusion</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/foundation.css">
 </head>
 <body class="infusion-docs">
+    <div class="row">
 <%- @content %>
+    </div>
 </body>
 </html>
