Make CSS hrefs absolute

--- a/src/layouts/default.html.handlebars
+++ b/src/layouts/default.html.handlebars
@@ -1,9 +1,9 @@
 <html>
 <head>
     <title>{{document.title}} | Fluid Infusion</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/highlightjs/default.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/foundation.css">
+    <link rel="stylesheet" href="/css/highlightjs/default.css">
     <style type="text/css">
         .infusion-docs .row { max-width: 54rem; }
         .infusion-docs pre code { line-height: 1.3rem; font-weight: normal; }
