Add "Edit on GitHub"

--- a/src/layouts/default.html.handlebars
+++ b/src/layouts/default.html.handlebars
@@ -11,6 +11,7 @@
 </head>
 <body class="infusion-docs">
     <div class="row">
+        <p><a href="{{githubLocation}}">Edit on GitHub</a></p>
 {{{rewriteUrls content}}}
     </div>
 </body>
